add scroll up btn

--- a/src/components/nav-bar/index.css
+++ b/src/components/nav-bar/index.css
@@ -1,6 +1,11 @@
 .navbar {
+
+  
   transition: all 0.3s ease; /* Smooth transition for the navbar */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Shadow effect */
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.685); /* Shadow effect */
+  position:fixed; 
+  top: 0;
+
 }
 
 .navbar.sticky {
