--- a/src/components/nav-bar/index.css
+++ b/src/components/nav-bar/index.css
@@ -4,14 +4,15 @@
   border-color: rgba(255, 255, 255, 0.568);
   border-bottom-style: solid;
   
-  position:fixed; 
-  top: 0;
+  
+  
   font-size: 18px;
-  height: 65px;
+  /* height: 65px; */
 
 
   position: fixed; /* Fix the position of the navbar */
- 
+  top: 0;
+  left: 0;
   width: 100%;
   background-color: #333; /* Example background color */
   z-index: 1000; /* Ensure the navbar stays on top of other content */
