--- a/src/components/side-par/index.css
+++ b/src/components/side-par/index.css
@@ -21,16 +21,23 @@
   
   position: fixed;
   top: 0;
-  
+  z-index: 10000;
   
   display: flex;
   flex-direction: column;
-  height: 100%; /* Set the height of the parent div */
+  height: 100vh; /* Set the height of the parent div */
   border: 1px solid black; /* Just for visualization */
   overflow-y: auto;
   overflow-x :hidden;
-
+ 
   
+}
+.sidebar-phone {
+  height: 100vh; /* Set the height of the sidebar to 100% of the viewport height */
+  position: fixed; /* Position the sidebar fixed to the left */
+  top: 0; /* Position the sidebar at the top of the viewport */
+  left: 0; /* Position the sidebar at the left edge of the viewport */
+  z-index: 1000; /* Set a high z-index to ensure the sidebar appears above other content */
 }
 
 .child {
