--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -8,7 +8,8 @@
   .cover-image {
     
     width: 100%;
-    height: auto;
+
+    height: 100%;
     object-fit: cover; /* Ensure the image covers the entire container */
     transition: transform 0.5s ease; /* Add a transition for smooth animation */
   }
